# bemuse

./: .cvsignore  INTERNALS  Makefile.in  README  TODO  aclocal.m4  cleanup  config.yml  configure.ac  fixup  isbns  library.sql  notes  printbooks
cataloger/: Makefile.in  book.cc  book.h  catalog.cc  catalog.h  catalog_amazon.cc  catalog_amazon.h  catalog_base.cc  catalog_base.h  catalog_parallel.cc  catalog_parallel.h  catalog_z3950.cc  catalog_z3950.h  char_conv  db_entity.h  globals.cc  globals.h  html_parser.cc  html_parser.h  isbn.cc  isbn.h  location.cc  location.h  marc.cc  marc.h  metacatalog.cc  metacatalog.h  mysql_db.cc  mysql_db.h  net.cc  net.h  note.cc  note.h  query.cc  query.h  result.h  scan_word.cc  scan_word.h  scandata.cc  scandata.h  (+9 more)
cli/: Makefile.in  char_conv.cc  char_conv.h  debarcode.cc  html_printer.cc  html_printer.h  main.cc  printer.h  scan_main.cc  test.cc  test_marc.cc
desktop/: Makefile.in  class_to_C.php  globals.cc  headings_static.h  libraries_tree.h  library.ui  main.cc  main_window.h  shelf_text.h  text_with_headings.h  toggle_set.h  ui_builder.h
doc/: 4-digit_DDC.html  New_York_U.enz  larousse-8859-1.marc  library_diagrams.mdr  library_diagrams.xml  loathing.marc-raw  marc8.marc-raw  melvyl-z3950.rtf  speccharmarc8.html  usmarc_char_encoding.txt  utf8.marc-raw
m4/: yaz.m4
releases/: base.css  call.doc  call.html  entry.xls  library_all.doc  neighborhood libraries.doc  notes  people.doc  print.css  title.html
test-web/: config  create_db.sh  test_web.pl  wg.pm
web/: .cvsignore  .htacccess  .session.php.swp  about.php  base.css  batch.php  book.php  browse.php  call.php  classifications.php  classifications_all.php  classifications_dewey.php  classifications_h.php  (+25 more)
(+14 files in other folders)
